build: use ruby 3.3 for developing & only run ruby 3.3 & rails 7.1 in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,9 +52,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gemfile: ['rails_6.0', 'rails_6.1', 'rails_7.0', 'rails_7.1']
+        gemfile: ['rails_7.1']
 
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['3.3']
 
         client: ['active_record', 'redis']
 
