--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,31 +13,11 @@ on:
   pull_request:
     branches: [ master ]
 
-env:
-  POSTGRES_USER: postgres
-  POSTGRES_HOST: localhost
-  POSTGRES_PORT: 5432
-  POSTGRES_DB: rpush_test
-  PGPASSWORD: postgres # https://www.postgresql.org/docs/13/libpq-envars.html
-
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          # Maps tcp port 5432 on service container to the host
-          - 5432:5432
-
       redis:
         image: redis
         options: >-
@@ -56,13 +36,15 @@ jobs:
 
         ruby: ['3.3']
 
-        client: ['active_record', 'redis']
+        client: ['redis']
+
+        pattern: ['functional', 'unit']
 
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
@@ -70,19 +52,12 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
-    - name: Create PostgreSQL database
-      run: |
-        createdb \
-          --host=$POSTGRES_HOST \
-          --port=$POSTGRES_PORT \
-          --username=$POSTGRES_USER \
-          $POSTGRES_DB
-
     - name: Run tests
-      run: bundle exec rake
+      run: bundle exec rake spec
       env:
         # The hostname used to communicate with the PostgreSQL service container
         POSTGRES_HOST: localhost
         # The default PostgreSQL port
         POSTGRES_PORT: 5432
         CLIENT: ${{ matrix.client }}
+        PATTERN: spec/${{ matrix.pattern }}/*_spec.rb
